--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://aural.es/otoño'" />
+    <meta http-equiv="refresh" content="0; URL='https://auralteam.github.io/escaleta_Aural_60_B2B/'" />
   </head>
   <body>
     <p>Redirigiendo...</p>
