--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://www.aural.es'" />
+    <meta http-equiv="refresh" content="0; URL='https://www.aural.es/inicio'" />
   </head>
   <body>
     <p>Redirigiendo...</p>
